force-app/main/default/objects/Warranty_Labor_Request__c/Warranty_Labor_Request__c.object-meta.xml
<CustomObject>
    <description>captures all warranty labor requests created</description>
    <label>Warranty Labor Request</label>
    <nameField>
        <displayFormat>WLR-{0000000}</displayFormat>
        <label>Warranty Labor Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Labor Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>