force-app/main/default/objects/Warranty_Labor_Request__c/fields/Approval_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Comments__c</fullName>
    <label>Approval/Rejection Comments</label>
    <type>TextArea</type>
</CustomField>