force-app/main/default/objects/Warranty_Labor_Request__c/fields/Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Date__c</fullName>
    <label>Approval/Rejection Date</label>
    <type>Date</type>
</CustomField>