force-app/main/default/objects/Warranty_Labor_Request__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>TEXT( Equipment__r.Class__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class</label>
    <type>Text</type>
</CustomField>