force-app/main/default/objects/Warranty_Labor_Request__c/fields/Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address__c</fullName>
    <formula>IF(Street__c&lt;&gt;&apos;&apos;, Street__c &amp; &apos;, &apos;,&apos;&apos;)&amp; IF(City__c&lt;&gt;&apos;&apos;, City__c &amp; &apos;, &apos;,&apos;&apos;)&amp; IF(Street__c&lt;&gt;&apos;&apos;, State__c &amp; &apos; &apos;,&apos;&apos;) &amp; IF(Postal__c&lt;&gt;&apos;&apos;, Postal__c &amp; &apos; &apos;,&apos;&apos;)&amp; Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Address</label>
    <type>Text</type>
</CustomField>