force-app/main/default/objects/Warranty_Labor_Request__c/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <formula>Equipment__r.Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Name</label>
    <type>Text</type>
</CustomField>