force-app/main/default/objects/Warranty_Labor_Request__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Equipment Record.</description>
    <label>Equipment Serial Number</label>
    <referenceTo>Equipment_Declaration__c</referenceTo>
    <relationshipLabel>Warranty Labor Requests</relationshipLabel>
    <relationshipName>Warranty_Labor_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>