force-app/main/default/objects/Warranty_Labor_Request__c/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <formula>Equipment__r.Installation_Date_of_New_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>