force-app/main/default/objects/Warranty_Labor_Request__c/fields/ISO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Country_Code__c</fullName>
    <label>ISO Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BF</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DJ</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>