force-app/main/default/objects/Warranty_Labor_Request__c/fields/Participation_number__c.field-meta.xml
<CustomField>
    <fullName>Participation_number__c</fullName>
    <description>Filled from PRM Services object related to Account.</description>
    <inlineHelpText>Filled from PRM Services object related to Account.</inlineHelpText>
    <label>Participation #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>