force-app/main/default/objects/Warranty_Labor_Request__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Filled in from Partner Type picklist on Account object</description>
    <inlineHelpText>Filled in from Partner Type picklist on Account object</inlineHelpText>
    <label>Partner Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>