force-app/main/default/objects/Warranty_Labor_Request__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>5001</fullName>
            </value>
            <value>
                <fullName>5003</fullName>
            </value>
            <value>
                <fullName>5004</fullName>
            </value>
            <value>
                <fullName>5006</fullName>
            </value>
            <value>
                <fullName>5007</fullName>
            </value>
            <value>
                <fullName>5008</fullName>
            </value>
            <value>
                <fullName>5302</fullName>
            </value>
            <value>
                <fullName>5305</fullName>
            </value>
            <value>
                <fullName>5362</fullName>
            </value>
            <value>
                <fullName>5588</fullName>
            </value>
            <value>
                <fullName>5670</fullName>
            </value>
            <value>
                <fullName>5674</fullName>
            </value>
            <value>
                <fullName>5675</fullName>
            </value>
            <value>
                <fullName>5684</fullName>
            </value>
            <value>
                <fullName>5685</fullName>
            </value>
            <value>
                <fullName>5688</fullName>
            </value>
            <value>
                <fullName>5840</fullName>
            </value>
            <value>
                <fullName>5870</fullName>
            </value>
            <value>
                <fullName>5871</fullName>
            </value>
            <value>
                <fullName>5874</fullName>
            </value>
            <value>
                <fullName>5875</fullName>
            </value>
            <value>
                <fullName>5877</fullName>
            </value>
            <value>
                <fullName>5878</fullName>
            </value>
            <value>
                <fullName>5884</fullName>
            </value>
            <value>
                <fullName>5885</fullName>
            </value>
            <value>
                <fullName>5886</fullName>
            </value>
            <value>
                <fullName>5887</fullName>
            </value>
            <value>
                <fullName>5888</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>