force-app/main/default/objects/Warranty_Labor_Request__c/fields/Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount__c</fullName>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>