force-app/main/default/objects/Warranty_Labor_Request__c/fields/Service_Problem_Repair_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Problem_Repair_Description__c</fullName>
    <label>Service Problem &amp; Repair Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>