force-app/main/default/objects/Warranty_Labor_Request__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>